<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="night_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="url_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="email_address">t.rul26@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_connection">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="collection">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="playback_progress_start">00:00</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlist">Вы не создали \nни одного плейлиста</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="no_connection_message">Проверьте подключение к интернету</string>
    <string name="server_error_message">Ошибка сервера</string>
    <string name="playlist_title">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="permission_rationale">Разрешение на доступ к изображениям необходимо для установки обложки плейлиста</string>
    <string name="playlist_created">Плейлист "%s" создан</string>
    <string name="complete_playlist_creation">Завершить создание плейлиста?</string>
    <string name="data_loss_warning">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="added_to_playlist">Добавлено в плейлист</string>
    <string name="already_in_playlist">Трек уже добавлен в плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_count">трек</string>
    <string name="share_playlist">Поделиться</string>
    <string name="update_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_warning">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete_playlist_warning">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="share_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="empty_playlist">В этом плейлисте нет треков</string>
    <string name="ok">OK</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>

    <plurals name="track_count">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>