<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".settings.ui.fragment.SettingsFragment">

    <!-- Settings -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin_start"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/settings_margin_end"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/settings"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/primary_text_size" />

    </LinearLayout>

    <!-- Night theme -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitcher"
        style="@style/SwitchStyle"
        android:layout_marginTop="40dp"
        android:text="@string/night_theme" />

    <!-- Share app -->
    <TextView
        android:id="@+id/share"
        style="@style/SettingsActivityTextStyle"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/share" />

    <!-- Support -->
    <TextView
        android:id="@+id/support"
        style="@style/SettingsActivityTextStyle"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/support" />

    <!-- Terms of use -->
    <TextView
        android:id="@+id/terms_of_use"
        style="@style/SettingsActivityTextStyle"
        android:text="@string/terms_of_use"
        app:drawableEndCompat="@drawable/arrow_forward" />

</LinearLayout>